syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "CadastraChavePixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service CadastraChavePixGrpcService {
  rpc cadastrar (CadastraChavePixRequest) returns (CadastraChavePixResponse) {}
}

enum TipoDaChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoDaConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastraChavePixRequest {
  string clientId = 1;
  TipoDaChave tipoDaChave = 2;
  string chave = 3;
  TipoDaConta tipoDaConta = 4;
}

message CadastraChavePixResponse {
  string message = 1;
}